
New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.

2017-05-22 DariusIII
	Chg: Rename APIs.Steam.last_update to APIs.steam_apps.last_update
	Fix: Remove PHP7 return type declaration in Games.php
2017-04-22 niel
	Fix: Fix path reference to sttings.php for View Logs page. Fixes issue 2456.
2017-05-19 b3rs3rk
	Fix: nzedb.xml not updated to reflect new PC Games support
	Fix: Remove function void return declarations at they are throwing UnknownType errors
	Fix: Incorrect genres_id column in use in update queries, still genre_id -- also reduce sleep time for Steam calls
2017-05-19 DariusIII
	* Chg: Update PC Games support, use Steam and GiantBomb only
2017-05-09 niel
	Fix: Use correct constant to mark PAR2 used in NameFixer.
	Mrg: PR 2453, from kaibosh - tmux config adjustments for <= v1.8
2017-05-08 DariusIII
	Fix: Path to bootstrap.min.js in Default theme
2017-05-06 niel
	Fix: Problem with external yEnc decoders (hopefully). Closes issues 2383 and 2435.
2017-05-04 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.7.2.1



2017-05-03 niel
	Mrg: PR 2448, from kaibosh - Update tmux configs for tmux 2.4.
	Fix: NULL value 'predate' in IRCScraper. Closes issue 2449.
2017-05-01 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.7.2.0


2017-04-30 niel
	Add: Logging for IRCScraper's testing for duplicates, to try to determine why it sometimes
		fails to detect them. This also prevents the script from exiting because of the exception.
2017-04-28 niel
	Mrg: dev-ircscraper branch. Changes to IRCScraper class to make it more resilient for those
		suffering error about "missing catalogue".
2017-04-28 DariusIII
	Fix: Properly populate anidb_episodes table
2017-04-20 niel